# doc2latex

./: .gitignore  README.md  doc2latex-spec.md  index.html  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/doc2latex/app/: Doc2LatexApp.kt  MainActivity.kt
android-app/app/src/main/python/: doc2latex_app.py
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
doc2latex/: __init__.py  assembler.py  blocks.py  cli.py  pipeline.py  routers.py
doc2latex/converters/: eq_to_latex.py  table_to_latex.py  text_to_latex.py
doc2latex/detectors/: equation.py  figure.py  table.py
doc2latex/readers/: docx_reader.py  image_reader.py  marker_reader.py  nougat_reader.py  pdf_reader.py
doc2latex/templates/: base.tex.jinja
packaging/: build_sidecar.py  doc2latex.spec  entrypoint.py
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: test_assembler.py  test_cli.py  test_nougat_translator.py  test_pipeline_docx.py
