[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc2latex"
version = "0.1.0"
description = "Fully offline PDF / DOCX / JPEG to LaTeX converter."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "doc2latex" }]
license = { text = "MIT" }
keywords = ["latex", "pdf", "docx", "ocr", "offline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

dependencies = [
    # --- Core (pure-Python or wheels available on every supported Python) ---
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "Pillow>=10.0",
    "numpy>=1.26",
    "pdfplumber>=0.11",
    "pytesseract>=0.3.10",

    # --- ML / heavy deps: gated to Python <3.14 because upstream packages
    # (pix2tex, nougat-ocr, marker-pdf, etc.) pin Pillow 10.x and old torch
    # versions that don't yet ship 3.14 wheels. They install automatically on
    # 3.10–3.13 and are skipped on 3.14 until the ecosystem catches up. ---
    "opencv-python>=4.9; python_version < '3.14'",
    "camelot-py[cv]>=0.11; python_version < '3.14'",
    "pix2tex>=0.1.2; python_version < '3.14'",
    "nougat-ocr>=0.1.17; python_version < '3.14'",
    "marker-pdf>=0.2; python_version < '3.14'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
doc2latex = "doc2latex.cli:app"

[tool.setuptools.packages.find]
include = ["doc2latex*"]

[tool.setuptools.package-data]
doc2latex = ["templates/*.jinja"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
