[package]
name = "doc2latex-app"
version = "0.1.1"
description = "doc2latex desktop GUI."
authors = ["doc2latex"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "doc2latex_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-opener = "2.2"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[features]
# Default features for prod builds. Use `--no-default-features` for headless tests.
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
